# aip

./: .bazelrc  .dockerignore  .env-template  .gitignore  .yarnrc.yml  BUILD.bazel  README.md  WORKSPACE  docker-compose.yml  environment.yaml  go.mod  go.sum  go.work  go.work.sum  package-list.txt  package-lock.json  package.json  requirements.txt
aip-controller/cmd/supd/: BUILD.bazel  chat.go  main.go
aip-controller/pkg/collective/: BUILD.bazel  agent.go  data.go  memory.go  message.go  models.go  pipeline.go  port.go  profile.go  segment.go  task.go  team.go
aip-controller/pkg/collective/comms/: BUILD.bazel  fx.go  manager.go  routing.go
aip-controller/pkg/collective/msn/: BUILD.bazel  api.go  channel.go  consumer.go  endpoint.go  fx.go  message.go  realtime.go  role.go  router.go  service.go
aip-controller/pkg/collective/supervisor/: BUILD.bazel  config.go  errors.go  process.go  protocol.go  supervisor.go
aip-controller/pkg/daemon/: BUILD.bazel  daemon.go  fx.go
aip-controller/pkg/ford/: BUILD.bazel  fx.go  manager.go
aip-controller/pkg/ford/agent/: BUILD.bazel  manager.go
aip-controller/pkg/ford/forddb/: basictype.go  cas.go  consts.go  database.go  errors.go  listener.go  log.go  logconsumer.go  logstore.go  logstream.go  rawresource.go  reflect.go  resource.go  resourceid.go  resourcemetadata.go  resourcenode.go  resourcepointer.go  resourcetype.go  resourcetypeimpl.go  resourcetypename.go  serialization.go  storage.go  type.go  typesystem.go  utils.go
aip-controller/pkg/ford/reconcilers/: BUILD.bazel  agentreconciler.go  portreconciler.go  taskreconciler.go
aip-controller/pkg/ford/reconciliation/: api.go  fx.go  reconciler.go
aip-forddb/pkg/apimachinery/: BUILD.bazel  mux.go
aip-forddb/pkg/apis/: BUILD.bazel  fx.go
aip-forddb/pkg/apis/graphql/: BUILD.bazel  fx.go  graphql.go  meta.go  operators.go  resources.go  rpc.go  subscription.go  typesystem.go
aip-forddb/pkg/apis/rest/: BUILD.bazel  fx.go
aip-forddb/pkg/apis/rpc/: BUILD.bazel  fx.go
aip-forddb/pkg/apis/supervisor/: BUILD.bazel
aip-forddb/pkg/forddb/: BUILD.bazel  basictype.go  consts.go  database.go  field.go  ipld.go  log.go  logcheckpoint.go  logiterator.go  logstore.go  rawresource.go  reflect.go  reflectedfield.go  resource.go  resourcebase.go  resourceid.go  resourcelink.go  resourcemetadata.go  resourcenode.go  resourcepointer.go  resourcetype.go  resourcetypeimpl.go  serialization.go  type.go  typeid.go  typemetadata.go  typesystem.go  utils.go
aip-forddb/pkg/impl/: BUILD.bazel  database.go  eventdispatcher.go  fx.go  node.go  objectindexer.go  resourceslot.go  resourcetable.go
aip-forddb/pkg/jobs/: BUILD.bazel  helpers.go  job.go  reconciler.go  supervisor.go
aip-forddb/pkg/logstore/: BUILD.bazel  filelogiterator.go  filelogstore.go  memorylogiterator.go  memorylogstore.go  oldfilelogiterator.go  oldfilelogstore.go
aip-forddb/pkg/objectstore/: BUILD.bazel  index.go  linksystem.go  object.go  objectstore.go
aip-forddb/pkg/objectstore/badger/: BUILD.bazel  badger.go  btree.go  fx.go
aip-forddb/pkg/objectstore/firestore/: BUILD.bazel  firestore.go  fx.go
aip-forddb/pkg/objectstore/ipfsgraph/: BUILD.bazel  storage.go
aip-forddb/pkg/reconciliation/: BUILD.bazel  api.go  fx.go  reconciler.go
aip-forddb/pkg/tracing/: BUILD.bazel  context.go  trace.go  tracer.go
aip-forddb/pkg/typesystem/: BUILD.bazel  api.go  builder.go  consts.go  node.go  prototype.go  reflect.go  type.go  typesystem.go  typesystem_test.go  value.go
aip-langchain/pkg/chain/: BUILD.bazel  basic.go  chain.go  context.go  io.go  options.go  parser.go  predict.go  prompt.go  sequential.go  subchain.go
aip-langchain/pkg/chunkers/: BUILD.bazel  chunker.go  tiktoken.go
aip-langchain/pkg/compressors/: BUILD.bazel  compressor.go  simple.go
aip-langchain/pkg/documents/: BUILD.bazel  alternative.go  document.go
aip-langchain/pkg/indexing/: BUILD.bazel  context.go  session.go
aip-langchain/pkg/indexing/impl/: BUILD.bazel  context.go  index.go  iterator.go  session.go
aip-langchain/pkg/indexing/reducers/: BUILD.bazel  diffusion.go
aip-langchain/pkg/memory/: BUILD.bazel  channelchatmemory.go  contextualmemory.go
aip-langchain/pkg/summarizers/: BUILD.bazel  mipmap.go
aip-langchain/pkg/tokenizers/: BUILD.bazel  tiktoken.go
aip-langchain/pkg/tot/: BUILD.bazel  algo.go  evaluator.go  tree.go
aip-langchain/pkg/vectorstore/: BUILD.bazel  collection.go  document.go  index.go  indexer.go  provider.go  retriever.go
aip-langchain/pkg/vectorstore/faiss/: BUILD.bazel  index.go
aip-langchain/pkg/vectorstore/milvus/: BUILD.bazel  collection.go  data_test.go  fx.go  milvus.go  provider.go  storage_test.go
aip-langchain/pkg/vectorstore/qdrant/: BUILD.bazel  collection.go  fx.go  provider.go
aip-sdk/pkg/cli/: BUILD.bazel  fx.go  index.go  root.go
aip-sdk/pkg/config/: BUILD.bazel  configmanager.go  networkmanager.go  resourcemanager.go
aip-sdk/pkg/storage/: BUILD.bazel  composite.go
aip-sdk/pkg/storage/faiss/: BUILD.bazel  inversevectorindex.go
aip-sdk/pkg/storage/inmemory/: BUILD.bazel  fx.go  inmemory.go
aip-sdk/pkg/storage/memgraph/: BUILD.bazel  fx.go  storage.go
aip-sdk/pkg/storage/milvus/: fx.go  milvus.go  provider.go  storage.go  (+1 more)
aip-sdk/pkg/utils/: BUILD.bazel  reflect.go  registry.go  slices.go
aip-wiki/: BUILD  BUILD.bazel  go.mod  go.sum
aip-wiki/cmd/wikictl/: BUILD.bazel  main.go
aip-wiki/cmd/wikid/: BUILD.bazel  main.go
aip-wiki/exp/: embeddings.go  fx.go
aip-wiki/exp/gocodegen/: go.go  mdcodegen.go
aip-wiki/exp/mdcodegen/: mdcodegen.go
aip-wiki/exp/mdedit/: document.go  editor.go  explorer.go  highlight.go  session.go  view.go  widgets.go
aip-wiki/frontend/: package-lock.json  package.json  tsconfig.json
aip-wiki/pkg/wiki/: BUILD.bazel  anonymizer.go  fx.go  handler.go  imagegenerator.go  layout.go  pagegenerator.go  router.go  wiki.go
aip-wiki/public/: BUILD.bazel  static.go
aip-wiki/public/css/: styles.css
aip-wiki/web/: codegen.ts  package.json
aip-wiki/web/public/: index.html
aip-wiki/web/src/: App.tsx  index.tsx  react-app-env.d.ts
(+824 files in other folders)
