load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "forddb",
    srcs = [
        "basictype.go",
        "cas.go",
        "consts.go",
        "database.go",
        "errors.go",
        "listener.go",
        "log.go",
        "logcheckpoint.go",
        "logconsumer.go",
        "logiterator.go",
        "logstore.go",
        "logstream.go",
        "rawresource.go",
        "reflect.go",
        "resource.go",
        "resourcebase.go",
        "resourceid.go",
        "resourcelink.go",
        "resourcemetadata.go",
        "resourcenode.go",
        "resourcepointer.go",
        "resourcetype.go",
        "resourcetypeimpl.go",
        "resourcetypename.go",
        "serialization.go",
        "type.go",
        "typeid.go",
        "typemetadata.go",
        "typesystem.go",
        "utils.go",
    ],
    importpath = "github.com/greenboxal/aip/aip-forddb/pkg/forddb",
    visibility = ["//visibility:public"],
    deps = [
        "//aip-forddb/pkg/typesystem",
        "//aip-sdk/pkg/utils",
        "@com_github_antonmedv_expr//:expr",
        "@com_github_antonmedv_expr//ast",
        "@com_github_antonmedv_expr//checker",
        "@com_github_antonmedv_expr//compiler",
        "@com_github_antonmedv_expr//conf",
        "@com_github_antonmedv_expr//file",
        "@com_github_antonmedv_expr//optimizer",
        "@com_github_antonmedv_expr//parser",
        "@com_github_antonmedv_expr//vm",
        "@com_github_gertd_go_pluralize//:go-pluralize",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_ipfs_go_cid//:go-cid",
        "@com_github_ipld_go_ipld_prime//:go-ipld-prime",
        "@com_github_ipld_go_ipld_prime//codec/dagjson",
        "@com_github_ipld_go_ipld_prime//datamodel",
        "@com_github_ipld_go_ipld_prime//linking/cid",
        "@com_github_ipld_go_ipld_prime//schema",
        "@com_github_jbenet_goprocess//:goprocess",
        "@com_github_jbenet_goprocess//context",
        "@com_github_multiformats_go_multibase//:go-multibase",
        "@com_github_multiformats_go_multihash//:go-multihash",
        "@com_github_pelletier_go_toml_v2//:go-toml",
        "@com_github_samber_lo//:lo",
        "@com_github_stoewer_go_strcase//:go-strcase",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
