load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracing",
    srcs = [
        "context.go",
        "fx.go",
        "trace.go",
        "tracer.go",
    ],
    importpath = "github.com/greenboxal/aip/aip-forddb/pkg/tracing",
    visibility = ["//visibility:public"],
    deps = [
        "//aip-forddb/pkg/forddb",
        "@com_github_google_uuid//:uuid",
        "@com_github_jbenet_goprocess//:goprocess",
        "@com_github_jbenet_goprocess//context",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
