load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "summarizers",
    srcs = [
        "chatgpt.go",
        "mipmap.go",
        "summarizer.go",
    ],
    importpath = "github.com/greenboxal/aip/aip-langchain/pkg/summarizers",
    visibility = ["//visibility:public"],
    deps = [
        "//aip-controller/pkg/collective",
        "//aip-langchain/pkg/chunkers",
        "//aip-langchain/pkg/indexing",
        "//aip-langchain/pkg/tokenizers",
        "@com_github_sashabaranov_go_openai//:go-openai",
    ],
)
