load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "configmanager.go",
        "fx.go",
        "networkmanager.go",
        "resourcemanager.go",
    ],
    importpath = "github.com/greenboxal/aip/aip-sdk/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_knadh_koanf_parsers_dotenv//:dotenv",
        "@com_github_knadh_koanf_parsers_json//:json",
        "@com_github_knadh_koanf_parsers_toml//:toml",
        "@com_github_knadh_koanf_parsers_yaml//:yaml",
        "@com_github_knadh_koanf_providers_env//:env",
        "@com_github_knadh_koanf_providers_file//:file",
        "@com_github_knadh_koanf_v2//:koanf",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
        "@com_github_multiformats_go_multiaddr//net",
        "@org_uber_go_fx//:fx",
    ],
)
