load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "math.go",
        "reflect.go",
        "registry.go",
        "slices.go",
    ],
    importpath = "github.com/greenboxal/aip/aip-sdk/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ipld_go_ipld_prime//schema",
        "@com_github_samber_lo//:lo",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "utils_test",
    srcs = ["reflect_test.go"],
    embed = [":utils"],
    deps = ["@com_github_stretchr_testify//require"],
)
